--- a/src/main/resources/templates/includes/base.html
+++ b/src/main/resources/templates/includes/base.html
@@ -56,6 +56,12 @@
             }
         }
 
+        @media (min-width: 576px) {
+            .modal-dialog {
+                max-width: 550px;
+            }
+        }
+
         .modal-header {
             padding: .6rem .6rem;
         }
