--- a/src/main/resources/templates/tpl/form_bak.html
+++ b/src/main/resources/templates/tpl/form_bak.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 <div class="container" th:with="required = ${new com.rick.formflow.form.valid.Required(true)}">
-    <form class="needs-validation dialog-form" th:id="${formBO.form.id}" th:name="${formBO.form.code}" novalidate>
+    <form class="needs-validation dialog-form" th:action="'/forms/page/' + ${formBO.getActionUrl()}" method="post" th:id="${formBO.form.id}" th:name="${formBO.form.code}" novalidate>
         <div class="form-group row" th:each="p : ${formBO.propertyList}" th:with="isRequired = ${p.configurer.validatorProperties.get('Required.required') eq null ? false : p.configurer.validatorProperties.get('Required.required')}">
             <label th:for="${p.name}" class="col-sm-2 col-form-label" th:classappend="${isRequired ? 'required' : ''}" th:text="${p.configurer.label}"></label>
             <div class="col-sm-10">
-                <input th:attr="disabled=${(p.name eq 'code' || (p.name eq 'name' && formBO.form.code eq 'sys_dict')) && formBO.instanceId != null},pattern=${p.configurer.validatorProperties.get('CustomizeRegex.regex')}" th:if="${p.configurer.cpnType == T(com.rick.formflow.form.cpn.core.CpnTypeEnum).TEXT}" type="text" class="form-control" th:id="${p.name}" th:name="${p.name}" th:maxlength="${p.configurer.validatorProperties.get('Length.max')}"
+                <input th:attr="pattern=${p.configurer.validatorProperties.get('CustomizeRegex.regex')}" th:if="${p.configurer.cpnType == T(com.rick.formflow.form.cpn.core.CpnTypeEnum).TEXT}" type="text" class="form-control" th:id="${p.name}" th:name="${p.name}" th:maxlength="${p.configurer.validatorProperties.get('Length.max')}"
                        th:placeholder="${p.configurer.placeholder}" th:value="${p.value}" th:required="${isRequired}" th:classappend="${errors eq null ? '' : (#maps.containsKey(errors, p.name) ? 'is-invalid' : 'is-valid')}">
 
                 <input th:if="${p.configurer.cpnType == T(com.rick.formflow.form.cpn.core.CpnTypeEnum).NUMBER_TEXT}" type="text" class="form-control" th:id="${p.name}" th:name="${p.name}" th:max="${p.configurer.validatorProperties.get('Size.max')}" th:min="${p.configurer.validatorProperties.get('Size.min')}"
@@ -28,9 +28,9 @@
                 <textarea th:if="${p.configurer.cpnType == T(com.rick.formflow.form.cpn.core.CpnTypeEnum).TEXTAREA}" class="form-control" th:id="${p.name}" th:name="${p.name}" th:maxlength="${p.configurer.validatorProperties.get('Length.max')}"
                           th:placeholder="${p.configurer.placeholder}" th:required="${isRequired}" th:classappend="${errors eq null ? '' : (#maps.containsKey(errors, p.name) ? 'is-invalid' : 'is-valid')}" th:text="${p.value}"></textarea>
 
-                <select th:attr="disabled=${(p.name eq 'type' && formBO.form.code eq 'sys_dict') && formBO.instanceId != null}" th:if="${p.configurer.cpnType == T(com.rick.formflow.form.cpn.core.CpnTypeEnum).SELECT}" class="form-control" th:id="${p.name}" th:name="${p.name}"
+                <select th:if="${p.configurer.cpnType == T(com.rick.formflow.form.cpn.core.CpnTypeEnum).SELECT}" class="form-control" th:id="${p.name}" th:name="${p.name}"
                         th:placeholder="${p.configurer.placeholder}" th:required="${isRequired}" th:classappend="${errors eq null ? '' : (#maps.containsKey(errors, p.name) ? 'is-invalid' : 'is-valid')}">
-                    <option th:if="${(formBO.form.code eq 'core_material_category' && (formBO.instanceId == null || !(#strings.equals(option.name, #strings.toString(formBO.instanceId))))) ||  !(formBO.form.code eq 'core_material_category')}" th:each="option : ${p.configurer.options}" th:value="${option.name}" th:text="${option.label}" th:selected="${option.name eq p.value}"></option>
+                    <option th:each="option : ${p.configurer.options}" th:value="${option.name}" th:text="${option.label}" th:selected="${option.name eq p.value}"></option>
                 </select>
 
                 <div th:if="${p.configurer.cpnType == T(com.rick.formflow.form.cpn.core.CpnTypeEnum).FILE}">
