chore: code format

--- a/src/main/resources/templates/includes/base.html
+++ b/src/main/resources/templates/includes/base.html
@@ -74,6 +74,10 @@
             opacity: .3;
         }
 
+        .dialog-form table .col-form-label {
+            padding-left: 12px;
+        }
+
         .table-bordered thead td, .table-bordered thead th {
             border-width: 1px;
         }
