--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -51,9 +51,14 @@
     <div class="sidebar">
         <nav class="sidebar-nav">
             <ul class="nav">
+                <li class="nav-item" sec:authorize="hasAuthority('dashboard')">
+                    <a class="nav-link" href="javascript:addTab('dashboard', '仪表盘', '/dashboard')">
+                        <i class="nav-icon icon-speedometer"></i> 仪表盘
+                    </a>
+                </li>
                 <li class="nav-item nav-dropdown open" sec:authorize="hasAuthority('core_data')">
                     <a class="nav-link nav-dropdown-toggle" href="#">
-                        <i class="nav-icon icon-speedometer"></i> 主数据</a>
+                        <i class="nav-icon icon-wallet"></i> 主数据</a>
                     <ul class="nav-dropdown-items">
                         <li class="nav-item" sec:authorize="hasAuthority('core_plant')">
                             <a class="nav-link" href="javascript:addTab('plants', '库房', '/reports/695623902415556608')">
@@ -70,6 +75,11 @@
                                 <i class="nav-icon icon-people"></i> 合作伙伴
                             </a>
                         </li>
+                        <li class="nav-item" sec:authorize="hasAuthority('mm_material')">
+                            <a class="nav-link" href="javascript:addTab('mm_material', '物料', '/reports/695981455636959232')">
+                                <i class="nav-icon icon-basket-loaded"></i> 物料
+                            </a>
+                        </li>
                     </ul>
 
 
@@ -78,7 +88,7 @@
                     <a class="nav-link nav-dropdown-toggle" href="#">
                         <i class="nav-icon icon-settings"></i> 系统管理</a>
                     <ul class="nav-dropdown-items">
-                        <li class="nav-item" sec:authorize="hasAuthority('user_management')">
+                        <li class="nav-item" sec:authorize="hasAuthority('sys_user')">
                             <a class="nav-link" href="javascript:addTab('users', '用户管理', '/reports/694714180413960192')">
                                 <i class="nav-icon icon-people"></i> 用户管理
                             </a>
@@ -88,7 +98,7 @@
                                 <i class="nav-icon icon-directions"></i> 角色管理
                             </a>
                         </li>
-                        <li class="nav-item" sec:authorize="hasAuthority('dict_management')">
+                        <li class="nav-item" sec:authorize="hasAuthority('sys_dict')">
                             <a class="nav-link" href="javascript:addTab('dict', '字典管理', '/reports/695316160014499840')">
                                 <i class="nav-icon icon-notebook"></i> 字典管理
                             </a>
@@ -183,9 +193,9 @@
             // });
 
             nthTabs.addTab({
-                id: "core_partner",
-                title: '合作伙伴',
-                url: "/reports/695710879554998272",
+                id: "mm_material",
+                title: '物料',
+                url: "/reports/695981455636959232",
                 allowClose: false
             });
         })
