--- a/src/main/resources/templates/tpl/list.html
+++ b/src/main/resources/templates/tpl/list.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sp=""
->
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+      xmlns:sp="">
 <head th:replace="includes/base :: common_header(~{},~{::link},~{::style})">
     <link rel="stylesheet" th:href="@{/css/tab-common.css}">
     <link rel="stylesheet" th:href="@{/plugins/bootstrap-datepicker/css/bootstrap-datepicker.min.css}">
@@ -67,9 +68,9 @@
                             <i class="fa fa-search"></i> 查询</button>
                         <button class="btn btn-secondary mr-2" type="button" name="reset" th:if="${report.queryFieldList.size() > 0}">
                             <i class="fa fa-remove"></i> 重置</button>
-                        <a class="btn btn-secondary mr-2" id="exportBtn" th:href="${'/reports/' + id + '/export'}">
+                        <a class="btn btn-secondary mr-2" id="exportBtn" th:href="${'/reports/' + id + '/export'}" sec:authorize="${hasAuthority(#vars.report.code + '_read')}">
                             <i class="fa fa-upload"></i> 导出</a>
-                        <button class="btn btn-primary" type="button" onclick="showDialog('新增')">
+                        <button class="btn btn-primary" type="button" onclick="showDialog('新增')" sec:authorize="${hasAuthority(#vars.report.code + '_add')}">
                             <i class="fa fa-save"></i> 新增</button>
                     </div>
                 </form>
@@ -85,16 +86,20 @@
                             <th style="width: 30px">序号</th>
                             <th th:each="n : ${report.reportColumnList}" th:text="${n.label}" th:data-name="${n.name}" th:class="${n.sortable ? 'sortable text-' + n.align.name().toLowerCase() : 'text-' + n.align.name().toLowerCase() }"
                                 th:style="${n.columnWidth == null ? '': 'width: ' + n.columnWidth + 'px'}" th:if="${!n.hidden}"></th>
-                            <th class="text-center" style="width: 100px">操作</th>
+                            <th class="text-center" style="width: 100px" sec:authorize="${hasAuthority(#vars.report.code + '_delete') or hasAuthority(#vars.report.code + '_delete')}">操作</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr th:each="m : ${grid.rows}">
                             <td th:text="${mStat.index + 1 + (grid.page - 1) * grid.pageSize}"></td>
-                            <td th:each="v : ${grid.rows[mStat.index]}" th:text="${v}" th:class="${'text-' + report.reportColumnList.get(vStat.index).align.name().toLowerCase()}" th:if="${!report.reportColumnList.get(vStat.index).hidden}"></td>
-                            <td class="text-center">
-                                <a class="dialogBtn mr-2" href="javascript:;" th:onclick="showDialog('编辑', '[[${m[0]}]]')">编辑</a>
-                                <a href="javascript:;" th:onclick="deleteRow('[[${m[0]}]]')">删除</a>
+                            <td th:each="v : ${grid.rows[mStat.index]}" th:class="${'text-' + report.reportColumnList.get(vStat.index).align.name().toLowerCase()}" th:if="${!report.reportColumnList.get(vStat.index).hidden}">
+                                <a href="javascript:;" th:if="${vStat.index == 1}" th:text="${v}" th:onclick="showDialog('查看', '[[${m[0]}]]')"></a>
+                                <span th:if="${vStat.index > 1}" th:text="${v}"></span>
+                            </td>
+                            <td class="text-center" sec:authorize="${hasAuthority(#vars.report.code + '_delete') or hasAuthority(#vars.report.code + '_delete')}">
+<!--                                <a class="dialogBtn mr-2" href="javascript:;" th:onclick="showDialog('查看', '[[${m[0]}]]')" sec:authorize="${hasAuthority(#vars.report.code + '_read')}">查看</a>-->
+                                <a class="dialogBtn mr-2" href="javascript:;" th:onclick="showDialog('编辑', '[[${m[0]}]]')" sec:authorize="${hasAuthority(#vars.report.code + '_edit')}">编辑</a>
+                                <a href="javascript:;" th:onclick="deleteRow('[[${m[0]}]]')" sec:authorize="${hasAuthority(#vars.report.code + '_delete')}">删除</a>
                             </td>
                         </tr>
                         <tr th:if="${summary ne null}">
@@ -167,6 +172,8 @@
     <script th:src="@{/plugins/bootstrap-datepicker/js/bootstrap-datepicker.zh-CN.min.js}"></script>
     <script th:src="@{/plugins/multiple-select/multiple-select.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/table/jquery.exportTable.js}"></script>
+    <script th:src="@{/editable-table/editable-table.js}"></script>
+    <script th:src="@{/ajaxfileupload.js}"></script>
 
     <script th:inline="javascript">
         $.fn.multipleSelect.locales['zh-CN'] = {
@@ -237,7 +244,7 @@
         function showDialog(title, id) {
             $('#dialog-title').text(title)
             let report_id =/*[[${report.extraData} + '']]*/
-            $.get('/forms/page/' + report_id + (!id ? '' : '/' + id), function (res) {
+            $.get('/forms/page/' + report_id + (!id ? '' : '/' + id) + '?readonly=' + (title === '查看'), function (res) {
                 $modal.find('.modal-body').html(res)
                 $modal.modal({
                     show: true,
@@ -245,7 +252,7 @@
                 })
             })
         }
-        
+
         $('#okId').on('click', function () {
             saveForm(() => {
                 $modal.modal('hide');
