--- a/src/main/resources/templates/modules/material.html
+++ b/src/main/resources/templates/modules/material.html
@@ -14,17 +14,19 @@
     </style>
 </head>
 <body>
-<div class="container" th:with="required = ${new com.rick.formflow.form.valid.Required(true)}, col = ${formBO.form.getAdditionalInfo().get('label-col') == null ? 2 : formBO.form.getAdditionalInfo().get('label-col')}">
+<div class="container" th:with="required = ${new com.rick.formflow.form.valid.Required(true)}, col = ${(formBO.form.getAdditionalInfo() == null || formBO.form.getAdditionalInfo().get('label-col') == null) ? 2 : formBO.form.getAdditionalInfo().get('label-col')}">
     <form class="needs-validation dialog-form" th:classappend="${query.readonly == 'true' ? 'readonly' : ''}" th:action="'/forms/page/' + ${formBO.getActionUrl()}" method="post" th:id="${formBO.form.id}" th:name="${formBO.form.code}" novalidate>
         <div class="nav-tabs-boxed">
             <ul class="nav nav-tabs" role="tablist">
-                <li class="nav-item" th:each="t : ${formBO.form.getAdditionalInfo().get('pane-list')}"><a class="nav-link" th:classappend="${tStat.index == 0 ? 'active': ''}" data-toggle="tab" th:href="${'#pane-' + (tStat.index + 1)}" role="tab" aria-selected="true" th:text="${t}"></a></li>
+                <li class="nav-item" th:each="t : ${formBO.form.getAdditionalInfo().get('pane-list')}"><a class="nav-link" th:classappend="${tStat.index == 0 ? 'active': ''}" data-toggle="tab" th:href="${'#pane-' + (tStat.index + 1)}" role="tab" aria-selected="true" th:text="${t.class.name eq 'java.lang.String' ? t : t.label}" th:if="${t.class.name eq 'java.lang.String' ? true : (!t.hideIfAdd && formBO.instanceId == null || formBO.instanceId != null)}"></a></li>
             </ul>
             <div class="tab-content">
                 <div class="tab-pane" th:classappend="${i == 1 ? 'active': ''}" th:id="${'pane-' + i}" role="tabpanel" th:each="i: ${#numbers.sequence(1, formBO.form.getAdditionalInfo().get('pane-list').size())}">
                     <div class="form-group row" th:if="${#strings.equals(p.configurer.getAdditionalInfo().get('pane-index'), #strings.toString(i))}" th:each="p : ${formBO.propertyList}" th:with="isRequired = ${p.configurer.validatorProperties.get('Required.required') eq null ? false : p.configurer.validatorProperties.get('Required.required')}">
                         <label th:if="${!(p.name eq 'characteristic' || p.name eq 'attachment')}" th:for="${p.name}" th:class="${'col-form-label col-sm-' + col}" th:classappend="${isRequired ? 'required' : ''}" th:text="${p.configurer.label}"></label>
                         <div th:class="${'col-sm-' + (12 - col)}" th:classappend="${(p.name eq 'characteristic' || p.name eq 'attachment') ? 'col-sm-12' : ''}">
+                            <label class="col-form-label"  th:if="${p.configurer.cpnType == T(com.rick.formflow.form.cpn.core.CpnTypeEnum).LABEL}" th:text="${(p.configurer.options == null || p.value == null) ? p.value : p.configurer.optionMap[p.value]}"></label>
+
                             <input th:disabled="${p.configurer.disabled == true || (p.name eq 'code' && formBO.instanceId != null)}" th:attr="pattern=${p.configurer.validatorProperties.get('CustomizeRegex.regex')}" th:if="${p.configurer.cpnType == T(com.rick.formflow.form.cpn.core.CpnTypeEnum).TEXT}" type="text" class="form-control" th:id="${p.name}" th:name="${p.name}" th:maxlength="${p.configurer.validatorProperties.get('Length.max')}"
                                    th:placeholder="${p.configurer.placeholder}" th:value="${p.value}" th:required="${isRequired}" th:classappend="${errors eq null ? '' : (#maps.containsKey(errors, p.name) ? 'is-invalid' : 'is-valid')}">
 
