--- a/src/main/resources/templates/tpl/bak/form_bak.html
+++ b/src/main/resources/templates/tpl/bak/form_bak.html
@@ -13,11 +13,13 @@
     </style>
 </head>
 <body>
-<div class="container" th:with="required = ${new com.rick.formflow.form.valid.Required(true)}">
+<div class="container" th:with="required = ${new com.rick.formflow.form.valid.Required(true)}, col = ${(formBO.form.getAdditionalInfo() == null || formBO.form.getAdditionalInfo().get('label-col') == null) ? 2 : formBO.form.getAdditionalInfo().get('label-col')}">
     <form class="needs-validation dialog-form" th:classappend="${query.readonly == 'true' ? 'readonly' : ''}" th:action="'/forms/page/' + ${formBO.getActionUrl()}" method="post" th:id="${formBO.form.id}" th:name="${formBO.form.code}" novalidate>
         <div class="form-group row" th:each="p : ${formBO.propertyList}" th:with="isRequired = ${p.configurer.validatorProperties.get('Required.required') eq null ? false : p.configurer.validatorProperties.get('Required.required')}">
-            <label th:for="${p.name}" class="col-sm-2 col-form-label" th:classappend="${isRequired ? 'required' : ''}" th:text="${p.configurer.label}"></label>
-            <div class="col-sm-10">
+            <label th:for="${p.name}" th:class="${'col-form-label col-sm-' + col}" th:classappend="${isRequired ? 'required' : ''}" th:text="${p.configurer.label}"></label>
+            <div th:class="${'col-sm-' + (12 - col)}">
+                <label class="col-form-label"  th:if="${p.configurer.cpnType == T(com.rick.formflow.form.cpn.core.CpnTypeEnum).LABEL}" th:text="${(p.configurer.options == null || p.value == null) ? p.value : p.configurer.optionMap[p.value]}"></label>
+
                 <input th:disabled="${p.configurer.disabled == true}" th:attr="pattern=${p.configurer.validatorProperties.get('CustomizeRegex.regex')}" th:if="${p.configurer.cpnType == T(com.rick.formflow.form.cpn.core.CpnTypeEnum).TEXT}" type="text" class="form-control" th:id="${p.name}" th:name="${p.name}" th:maxlength="${p.configurer.validatorProperties.get('Length.max')}"
                        th:placeholder="${p.configurer.placeholder}" th:value="${p.value}" th:required="${isRequired}" th:classappend="${errors eq null ? '' : (#maps.containsKey(errors, p.name) ? 'is-invalid' : 'is-valid')}">
 
