feat: support ajax list

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -4,7 +4,17 @@
 <head th:replace="includes/base :: common_header(~{},~{::link},~{::style})">
     <link rel="stylesheet" th:href="@{/css/tab-common.css}">
     <style>
+        @media (min-width: 576px) {
+            .modal-dialog {
+                max-width: 620px!important;
 
+            }
+
+            .modal-dialog .modal-body {
+                padding: 0!important;
+                height: 540px;
+            }
+        }
     </style>
 </head>
 <body class="app">
@@ -13,10 +23,11 @@
         <div class="card">
             <div class="card-header">Card outline</div>
             <div class="card-body">这里是仪表盘</div>
-            <a class="a" href="javascript:;" onclick="showFormDialog('物料', '695978675677433856', '696078910634332160')">show material 1</a>
-            <a class="a" href="javascript:;" onclick="showFormDialog('物料', '695978675677433856', '696062598608588800')">show material 2</a>
-            <a class="a" href="javascript:;" onclick="showFormDialog('业务伙伴', '695708313425285120', '695729182495215616')">show material 3</a>
-            <a class="a" href="javascript:;" onclick="showReportDialog('列表', '695981455636959232')">show material 4</a>
+            <a class="a" href="javascript:;" onclick="showFormDialog('物料', '695978675677433856', '696078910634332160')">物料 1</a>
+            <a class="a" href="javascript:;" onclick="showFormDialog('物料', '695978675677433856', '696062598608588800')">物料 2</a>
+            <a class="a" href="javascript:;" onclick="showFormDialog('业务伙伴', '695708313425285120', '695729182495215616')">业务伙伴 1</a>
+
+            <a class="a" href="javascript:;" onclick="showReportDialog('列表', '697147523487240192')">物料查询</a>
         </div>
     </div>
 </th:block>
@@ -37,14 +48,21 @@
         }
 
         function showReportDialog(title, reportId) {
-            $('#dialog-title').text(title)
-            $.get('/reports/' + reportId, function (res) {
-                __$modal.find('.modal-body').html(res)
-                __$modal.modal({
-                    show: true,
-                    backdrop: 'static'
-                })
+            document.getElementById('iframe').src = '/reports/' + reportId
+            __$modal.modal({
+                show: true,
+                backdrop: 'static'
             })
+
+            // __$modal.find('.modal-body').html()
+            // $('#dialog-title').text(title)
+            // $.get('/reports/' + reportId, function (res) {
+            //     __$modal.find('.modal-body').html(res)
+            //     __$modal.modal({
+            //         show: true,
+            //         backdrop: 'static'
+            //     })
+            // })
         }
 
     </script>
@@ -60,9 +78,10 @@
                 </button>
             </div>
             <div class="modal-body">
+                <iframe id="iframe" src="" width="100%" style="border: 0; padding: 0; margin: 0; height: calc(100% - 6px);"></iframe>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-primary ok-show" id="okId">保存</button>
+                <button class="btn btn-primary ok-show" id="okId">确定</button>
                 <button class="btn btn-secondary" type="button" data-dismiss="modal">关闭</button>
             </div>
         </div>
