--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -186,19 +186,19 @@
         $(function () {
             $('[data-toggle="tooltip"]').tooltip()
 
-            // nthTabs.addTab({
-            //     id: "dashboard",
-            //     title: '仪表盘',
-            //     url: "/dashboard",
-            //     allowClose: false
-            // });
-
             nthTabs.addTab({
-                id: "mm_material",
-                title: '物料',
-                url: "/reports/695981455636959232",
+                id: "dashboard",
+                title: '仪表盘',
+                url: "/dashboard",
                 allowClose: false
             });
+
+            // nthTabs.addTab({
+            //     id: "mm_material",
+            //     title: '物料',
+            //     url: "/reports/695981455636959232",
+            //     allowClose: false
+            // });
         })
     </script>
 </div>
