fix: 查询条件日期参数格式化

--- a/src/main/resources/templates/tpl/list.html
+++ b/src/main/resources/templates/tpl/list.html
@@ -164,7 +164,7 @@
     <script type="text/javascript" th:src="@{/js/table/jquery.form.js}"></script>
     <script type="text/javascript" th:src="@{/plugins/jquery.form2json.js}"></script>
     <script type="text/javascript" th:src="@{/js/table/jquery.table.js}"></script>
-    <script type="text/javascript" th:src="@{/js/table/jquery.pageTable.js}"></script>
+    <script type="text/javascript" th:src="@{/js/jquery.pageTable.js}"></script>
     <script type="text/javascript" th:src="@{/js/table/jquery.formautofill.min.js}"></script>
     <script th:src="@{/plugins/bootstrap-datepicker/js/bootstrap-datepicker.min.js}"></script>
     <script th:src="@{/plugins/bootstrap-datepicker/js/bootstrap-datepicker.zh-CN.min.js}"></script>
