--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -9,7 +9,6 @@
                 max-width: 620px!important;
 
             }
-
             .modal-dialog .modal-body {
                 padding: 0!important;
                 height: 540px;
@@ -21,70 +20,27 @@
 <th:block th:replace="includes/base :: common_content(~{::div})">
     <div class="container-fluid">
         <div class="card">
-            <div class="card-header">Card outline</div>
-            <div class="card-body">这里是仪表盘</div>
-            <a class="a" href="javascript:;" onclick="showFormDialog('物料', '695978675677433856', '696078910634332160')">物料 1</a>
-            <a class="a" href="javascript:;" onclick="showFormDialog('物料', '695978675677433856', '696062598608588800')">物料 2</a>
-            <a class="a" href="javascript:;" onclick="showFormDialog('业务伙伴', '695708313425285120', '695729182495215616')">业务伙伴 1</a>
-
-            <a class="a" href="javascript:;" onclick="showReportDialog('列表', '697147523487240192')">物料查询</a>
+            物料1: <div class="dialogInput"></div>
+            <hr>
+            物料2: <div class="dialogInput"></div>
         </div>
     </div>
 </th:block>
 <th:block th:replace="includes/base :: common_js(~{::script})">
     <script th:src="@{/editable-table/editable-table.js}"></script>
+    <script th:src="@{/js/jquery.dialogInput.js}"></script>
 
     <script>
-        let __$modal = $('#__dialog')
-        function showFormDialog(title, formId, instanceId) {
-            $('#dialog-title').text(title)
-            $.get('/forms/page/' + formId + '/' + instanceId + '?readonly=true', function (res) {
-                __$modal.find('.modal-body').html(res)
-                __$modal.modal({
-                    show: true,
-                    backdrop: 'static'
-                })
-            })
-        }
-
-        function showReportDialog(title, reportId) {
-            document.getElementById('iframe').src = '/reports/' + reportId
-            __$modal.modal({
-                show: true,
-                backdrop: 'static'
-            })
-
-            // __$modal.find('.modal-body').html()
-            // $('#dialog-title').text(title)
-            // $.get('/reports/' + reportId, function (res) {
-            //     __$modal.find('.modal-body').html(res)
-            //     __$modal.modal({
-            //         show: true,
-            //         backdrop: 'static'
-            //     })
-            // })
-        }
-
+        $('.dialogInput').dialogInput({
+            title: '选择物料',
+            // placeholder: '请选择物料',
+            name: 'material_id',
+            reportId: '697147523487240192',
+            labelDisplay: function (row) {
+                return row.name + ' ' + (!row.characteristic ? '' : row.characteristic)
+            }
+        })
     </script>
 </th:block>
 </body>
-<div class="modal fade" id="__dialog" tabindex="-1" role="dialog" aria-labelledby="modalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-primary modal-dialog-auto" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="dialog-title"></h5>
-                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <iframe id="iframe" src="" width="100%" style="border: 0; padding: 0; margin: 0; height: calc(100% - 6px);"></iframe>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-primary ok-show" id="okId">确定</button>
-                <button class="btn btn-secondary" type="button" data-dismiss="modal">关闭</button>
-            </div>
-        </div>
-    </div>
-</div>
 </html>
